--- a/package.json
+++ b/package.json
@@ -182,6 +182,7 @@
     "@types/history": "4.7.6",
     "@types/jest": "^26.0.15",
     "@types/node": "14.14.10",
+    "@types/qrcode": "^1.3.5",
     "@types/react": "^16.9.44",
     "@types/react-dom": "^16.9.9",
     "@types/react-router-dom": "^5.1.6",
@@ -259,6 +260,7 @@
     "framer-motion": "^3.2.1",
     "history": "^5.0.0",
     "jwt-decode": "^3.1.2",
+    "qrcode": "^1.4.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.14.1",
