--- a/package.json
+++ b/package.json
@@ -259,8 +259,10 @@
     "electron-updater": "^4.3.4",
     "framer-motion": "^3.2.1",
     "history": "^5.0.0",
+    "jimp": "^0.16.1",
     "jwt-decode": "^3.1.2",
     "qrcode": "^1.4.4",
+    "qrcode-reader": "^1.0.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.14.1",
