--- a/package.json
+++ b/package.json
@@ -182,6 +182,7 @@
     "@types/history": "4.7.6",
     "@types/jest": "^26.0.15",
     "@types/node": "14.14.10",
+    "@types/node-rsa": "^1.0.0",
     "@types/qrcode": "^1.3.5",
     "@types/react": "^16.9.44",
     "@types/react-dom": "^16.9.9",
@@ -261,11 +262,13 @@
     "history": "^5.0.0",
     "jimp": "^0.16.1",
     "jwt-decode": "^3.1.2",
+    "node-rsa": "^1.1.1",
     "qrcode": "^1.4.4",
     "qrcode-reader": "^1.0.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.14.1",
+    "react-query": "^3.5.16",
     "react-router-dom": "^5.2.0",
     "regenerator-runtime": "^0.13.5",
     "source-map-support": "^0.5.19"
