--- a/src/package.json
+++ b/src/package.json
@@ -15,6 +15,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "ethereumjs-tx": "^2.1.2",
     "keytar": "^7.3.0",
     "web3": "^1.3.1"
   }
