--- a/package.json
+++ b/package.json
@@ -267,6 +267,7 @@
     "qrcode-reader": "^1.0.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-dropzone": "^11.2.4",
     "react-hook-form": "^6.14.1",
     "react-query": "^3.5.16",
     "react-router-dom": "^5.2.0",
