--- a/package.json
+++ b/package.json
@@ -268,6 +268,7 @@
     "qrcode": "^1.4.4",
     "qrcode-reader": "^1.0.4",
     "react": "^17.0.1",
+    "react-click-away-listener": "^2.0.0",
     "react-dom": "^17.0.1",
     "react-dropzone": "^11.2.4",
     "react-hook-form": "^6.14.1",
