--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "electron-fetch": "^1.7.3",
     "electron-is-dev": "^2.0.0",
     "electron-squirrel-startup": "^1.0.0",
+    "electron-store": "^7.0.2",
     "ethereumjs-tx": "^2.1.2",
     "file-saver": "^2.0.5",
     "framer-motion": "^4.1.2",
