--- a/package.json
+++ b/package.json
@@ -56,13 +56,9 @@
     "@babel/core": "^7.13.8",
     "@babel/preset-env": "^7.13.9",
     "@babel/preset-react": "^7.12.13",
-    "@electron-forge/cli": "^6.0.0-beta.54",
-    "@electron-forge/maker-deb": "^6.0.0-beta.54",
-    "@electron-forge/maker-rpm": "^6.0.0-beta.54",
-    "@electron-forge/maker-squirrel": "^6.0.0-beta.54",
-    "@electron-forge/maker-zip": "^6.0.0-beta.54",
     "@types/classnames": "^2.2.11",
     "@types/jsonwebtoken": "^8.5.1",
+    "@types/pouchdb": "^6.4.0",
     "@types/qrcode": "^1.4.0",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
@@ -88,10 +84,10 @@
     "@svgr/parcel-plugin-svgr": "^5.5.0",
     "axios": "^0.21.1",
     "classnames": "^2.2.6",
+    "date-fns": "^2.19.0",
     "electron-fetch": "^1.7.3",
     "electron-is-dev": "^2.0.0",
     "electron-squirrel-startup": "^1.0.0",
-    "electron-store": "^7.0.2",
     "ethereumjs-tx": "^2.1.2",
     "file-saver": "^2.0.5",
     "framer-motion": "^4.1.2",
@@ -99,6 +95,7 @@
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
     "keytar": "^7.4.0",
+    "pouchdb": "^7.2.2",
     "pure-react-carousel": "^1.27.6",
     "qrcode": "^1.4.4",
     "qrcode-reader": "^1.0.4",
