--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
     "react-dom": "^17.0.1",
     "react-dropzone": "^11.3.1",
     "react-hook-form": "^6.15.4",
+    "react-modal": "^3.12.1",
     "react-outside-click-handler": "^1.3.0",
     "react-query": "^3.12.0",
     "react-router-dom": "^5.2.0",
