--- a/package.json
+++ b/package.json
@@ -99,7 +99,6 @@
     "pure-react-carousel": "^1.27.6",
     "qrcode": "^1.4.4",
     "qrcode-reader": "^1.0.4",
-    "rc-notification": "^4.5.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-dropzone": "^11.3.1",
@@ -109,6 +108,7 @@
     "react-query": "^3.12.0",
     "react-router-dom": "^5.2.0",
     "react-switch": "^6.0.0",
+    "react-toastify": "^7.0.3",
     "web3": "^1.3.4"
   }
 }
