send wallet address to drive, network tab changes

--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
   },
   "keywords": [],
   "author": {
-    "name": "Ivan Saldano",
-    "email": "ivanms1@gmail.com"
+    "name": "Conun"
   },
   "license": "MIT",
   "build": {
