--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "conun-manager",
   "productName": "conun-manager",
-  "version": "1.0.0",
+  "version": "0.1.0-beta",
   "description": "Conun Manager",
   "homepage": "./",
   "main": "dist/electron/index.js",
