--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   },
   "keywords": [],
   "author": {
-    "name": "Conun"
+    "name": "Conun",
+    "email": "ivan@conun.co.kr"
   },
   "license": "MIT",
   "build": {
@@ -32,6 +33,13 @@
     "mac": {
       "category": "public.app-category.productivity"
     },
+    "extraResources": [
+      {
+        "from": "./assets",
+        "to": "assets"
+      }
+    ],
+    "asar": false,
     "win": {
       "target": [
         {
@@ -62,6 +70,7 @@
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
     "@types/react-router-dom": "^5.1.7",
+    "@types/websocket": "^1.0.2",
     "@typescript-eslint/eslint-plugin": "^2.18.0",
     "@typescript-eslint/parser": "^2.18.0",
     "autoprefixer": "9.8.6",
@@ -109,6 +118,7 @@
     "react-switch": "^6.0.0",
     "react-toastify": "^7.0.3",
     "react-tooltip": "^4.2.17",
-    "web3": "^1.3.4"
+    "web3": "^1.3.4",
+    "websocket": "^1.0.34"
   }
 }
