--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
       "package.json"
     ],
     "directories": {
+      "buildResources": "./icons",
       "output": "./out"
     },
     "appId": "conun.manager.app",
