--- a/package.json
+++ b/package.json
@@ -129,6 +129,7 @@
     "react-toastify": "^7.0.3",
     "react-tooltip": "^4.2.17",
     "web3": "^1.3.4",
-    "websocket": "^1.0.34"
+    "websocket": "^1.0.34",
+    "winston": "^3.3.3"
   }
 }
