--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "parcel build src/index.html --out-dir dist/parcel-build --public-url ./",
     "dev": "concurrently -k \"yarn start\" \"yarn:electron\"",
     "copy-assets": "copyfiles -f \"electron/assets/**/*\" \"dist/assets\"",
-    "electron": "wait-on tcp:1234 && tsc && electron .",
+    "electron": "wait-on tcp:1234 && tsc && yarn copy-assets && electron .",
     "make": "yarn build && tsc && yarn copy-assets && electron-builder",
     "release": "yarn build && tsc && yarn copy-assets && electron-builder --publish=always",
     "lint": "eslint --ext .ts ."
