--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -2,11 +2,13 @@ name: Build Executables
 
 on: [push]
 
-environment:
-  name: PRODUCTION
-
 env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  LOG_SERVER: ${{ env.LOG_SERVER }}
+  SERVER: ${{ env.SERVER }}
+  AUTH0_DOMAIN: ${{ env.AUTH0_DOMAIN }}
+  CLIENT_ID: ${{ env.CLIENT_ID }}
+  WEB3URL: ${{ env.WEB3URL }}
 
 jobs:
   linux:
@@ -22,6 +24,7 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 15.x
+      - run: echo ${LOG_SERVER}
       - name: install deps
         run: yarn install
       - name: package
