--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -52,6 +52,12 @@ jobs:
       - name: install deps
         run: yarn install
       - name: package
+        env:
+          LOG_SERVER: ${{ secrets.LOG_SERVER }}
+          SERVER: ${{ secrets.SERVER }}
+          AUTH0_DOMAIN: ${{ secrets.AUTH0_DOMAIN }}
+          CLIENT_ID: ${{ secrets.CLIENT_ID }}
+          WEB3URL: ${{ secrets.WEB3URL }}
         run: yarn make
       - name: Upload Executable
         uses: actions/upload-artifact@v2
