--- a/package.json
+++ b/package.json
@@ -51,7 +51,11 @@
             "ia32"
           ]
         }
-      ]
+      ],
+      "certificateFile": "private/conun.io.certificate.pfx",
+      "certificatePassword": "",
+      "verifyUpdateCodeSignature": "false",
+      "publisherName": "conun.io.certificate"
     },
     "linux": {
       "category": "Utility",
@@ -99,7 +103,6 @@
     "axios": "^0.21.1",
     "classnames": "^2.2.6",
     "date-fns": "^2.19.0",
-    "dotenv": "^9.0.2",
     "electron-fetch": "^1.7.3",
     "electron-is-dev": "^2.0.0",
     "electron-updater": "^4.3.8",
