--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "electron": "wait-on tcp:1234 && tsc && yarn copy-assets && electron .",
     "make": "yarn build && tsc && yarn copy-assets && electron-builder",
     "release": "yarn build && tsc && yarn copy-assets && electron-builder --publish=always",
-    "lint": "eslint --ext .ts ."
+    "lint": "eslint --ext .ts .",
+    "prepare": "husky install",
+    "pre-commit": "lint-staged"
   },
   "keywords": [
     "conun",
@@ -26,7 +28,7 @@
   },
   "repository": "https://github.com/CONUN-Global/conun-main-dapplication",
   "license": "MIT",
-  "copyright": "Copyright 2020 by CONUN GROUP",
+  "copyright": "Copyright 2021 by CONUN GROUP",
   "build": {
     "files": [
       "dist/**/*",
@@ -91,9 +93,17 @@
     "eslint": "^7.6.0",
     "eslint-plugin-import": "^2.20.0",
     "eslint-plugin-react": "^7.22.0",
+    "husky": "^6.0.0",
+    "lint-staged": "^11.0.0",
     "parcel-bundler": "1.12.3",
     "postcss-modules": "3.2.2",
+    "prettier": "^2.3.1",
     "sass": "^1.32.8",
+    "stylelint": "^13.13.1",
+    "stylelint-config-prettier": "^8.0.2",
+    "stylelint-config-standard": "^22.0.0",
+    "stylelint-order": "^4.1.0",
+    "stylelint-prettier": "^1.2.0",
     "typescript": "^4.0.2",
     "wait-on": "^5.2.1"
   },
@@ -131,5 +141,17 @@
     "web3": "^1.3.4",
     "websocket": "^1.0.34",
     "winston": "^3.3.3"
+  },
+  "lint-staged": {
+    "*.{json,md}": [
+      "prettier --write"
+    ],
+    "*.{js,jsx,ts,tsx,json,md}": [
+      "prettier --write",
+      "./node_modules/.bin/eslint --fix"
+    ],
+    "*.{css,scss}": [
+      "stylelint --fix"
+    ]
   }
 }
